--- a/index.html
+++ b/index.html
@@ -48,28 +48,32 @@
 
         <!-- Education -->
         <div class="section" id="education">
-            <h2>Education</h2>
-            <div class="info">
-                <p><strong>2024 – Present:</strong> PhD exchange program<br>
-                Inria (National Institute for Research in Computer Science and Automation), Valbonne, France<br>
-                Supervisor: Nicolas Nisse</p>
-
-                <p><strong>2023 – Present:</strong> PhD in Computer Science<br>
-                Universidade Federal do Ceará, Brazil<br>
-                Advisor: Rudini Menezes Sampaio</p>
-
-                <p><strong>2014 – 2016:</strong> Master in Computer Science<br>
-                Universidade Federal do Ceará, Brazil<br>
-                Advisor: Rudini Menezes Sampaio</p>
-
-                <p><strong>2012 – 2013:</strong> Exchange Program<br>
-                University of Massachusetts, Amherst – MA, United States</p>
-
-                <p><strong>2009 – 2014:</strong> Bachelorship in Computing<br>
-                Universidade Federal do Ceará, Brazil</p>
-            </div>
             <div>
-                <img src="figs/logos.png" alt="logos">
+                <h2>Education</h2>
+            </div>
+            <div class="education-container">
+                <div class="info">
+                    <p><strong>2024 – Present:</strong> PhD exchange program<br>
+                    Inria (National Institute for Research in Computer Science and Automation), Valbonne, France<br>
+                    Supervisor: Nicolas Nisse</p>
+
+                    <p><strong>2023 – Present:</strong> PhD in Computer Science<br>
+                    Universidade Federal do Ceará, Brazil<br>
+                    Advisor: Rudini Menezes Sampaio</p>
+
+                    <p><strong>2014 – 2016:</strong> Master in Computer Science<br>
+                    Universidade Federal do Ceará, Brazil<br>
+                    Advisor: Rudini Menezes Sampaio</p>
+
+                    <p><strong>2012 – 2013:</strong> Exchange Program<br>
+                    University of Massachusetts, Amherst – MA, United States</p>
+
+                    <p><strong>2009 – 2014:</strong> Bachelorship in Computing<br>
+                    Universidade Federal do Ceará, Brazil</p>
+                </div>
+                <div>
+                    <img src="figs/logos.png" alt="logos">
+                </div>
             </div>
         </div>
 
