--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Samuel Araujo - Researcher & Professor</title>
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Samuel Araujo - Researcher & Professor</title>   
 </head>
 <body>
     <header>
