--- a/index.html
+++ b/index.html
@@ -35,11 +35,10 @@
             <div class="info-container">
                 <div class="info">
                     <div class="text">
-                        I am Samuel N. Araújo, professor at the Federal Institute of Education, Science, and Technology of Ceará (IFCE), as well as a researcher and Phd student from Brazil. Currently, I am residing in France until November 2025, where I am collaborating with the Inria (National Institute for Research in Computer Science and Automation) at Université Côte d’Azur in Valbonne.
+                        Professor at the Federal Institute of Education, Science, and Technology of Ceará (IFCE), as well as a researcher and PhD student in Computer Science from Brazil. Currently residing in France until November 2025, engaged in collaborative research with <a href="https://www-sop.inria.fr/members/Nicolas.Nisse/">Nicolas Nisse</a> from Inria (National Institute for Research in Computer Science and Automation) at Université Côte d’Azur, located in Valbonne. The research focuses on areas such as combinatorial game theory, graph theory, and computational complexity.
                     </div>
-                        <p><p><p><p><strong>Birth Date:</strong> March 08, 1991</p>
-                        <p><strong>Country:</strong> Brazil</p>
                         <p><strong>Personal Email:</strong> sammueln@gmail.com</p>
+                        <p><a href="https://lattes.cnpq.br/8886076523699722"><strong>Curriculum Lattes (Brazil)</strong></a></p>
                 </div>
             
                 <div>
